static/css/style.css
/* General*/
html {
  scroll-behavior: smooth;
}
body{
  font-family: 'IBM Plex Sans', sans-serif;
  margin: auto;
}
.container-margin{
  margin-top: 10em;
}

.centered{
  text-align: center;
 
}
.centered > h3{
  margin: 1em 1em 0em 1em;
}

.container > h3{
  text-align: center;
}

.error{
  color: red
}

.thin-line{
  margin: 0
}
.svg_main{
 height:50%;
  color:white;
  margin-top:3em
}

/* set width of the svg in the "rate" iframe*/
a > svg {width:1.8em}

/* reviews  */
.review-wrap{
  border: solid 1px rgb(207, 203, 203);
  border-radius: 9px;
  width: 90%;
  margin:auto;
  margin-bottom: 1em;
  padding: 1em
}

 
/* ****** paginition ****** */
.paginition{
  text-align: center;
}
.paginition form{
  display: inline
}
#go-btn{
  background-color: #337ab7;
  color: white;
  border: none;
  padding: 0.2em;

}
#go-to{
  width: 2em;
}
/* ***** paginition end **** */


tr:nth-child(even) {
  background-color: #f0f0f0;

}


.text-right{text-align : right}








/* ********** index page ****************** */
.container-main{
  text-align: center;
  height: 50vh;
  width:100%;
  background-color: #E5EFF9;
  margin-top: 4em;
}
#main-svg{
  width: 60%;
  max-height: 70%;
  margin-top: 1em;
}
.headline{
  text-align: center;
  background-color: #e6eff9;
  padding: 0 1em 1em 1em;
  
}
.headline h1, .headline h3{
  margin:0;
  padding-bottom: 1.6em;
}


/************** Navigation  bar ***************************/
.navbar-collapse, .container-fluid>.navbar-header{
  background-color:white;
}

#contact, #account{
  color: #307bbb;
}
#contact:hover, #account:hover{
  text-decoration: underline
}
#navbar-default{
  
  border-color: white;
  
}


.nav-top{
width:100%;
height: 4em;
position: fixed;
top: 0;
background-color:white;
z-index: 1;

}


.right{
  float: right;
}

/* logo */
.home{
font-size:1.7em;
color: #307bbb
}





/* **************** log in & register pages ********************** */

.label-icon{
  padding-left:1em;
  
}

#log_error{
    color: red;
    position: relative;
    top: -35px;
}




/* ************** result page ********************* */

.result-container{

margin: 1em 1em 1em 1em;
text-align: left;
}

.result-img{
  width:100%;
  margin: 0.3em
}


/* ******** book page *********** */
.details{
  padding: 1em
}
.panel-heading h4{
  color: #337ab7
}
.panel-group{
  margin: 2em 0 0 0;
}






/* ***** rating stars* *******/

svg {
    fill: #E1E1E1;
    pointer-events: none;
  }
  
.stars {
    display: flex;
    flex-flow: row-reverse;
    justify-content: flex-end;
    padding: 9px 9px;
  }
  
  .star.is-selected svg, .star.is-selected ~ .star svg {
    fill: #307bbb
  }
  
  .star:hover svg,
  .star:hover ~ .star svg {
    fill: #307bbb;
  }
  
  #rated {
    margin-top: 1em;
    padding-left:40px;
    color: grey;
    text-decoration: none;
    animation: fadein 2s;
  }
  .rate{
    width: 34px;
  }
  .rtl {
    direction: ltr;
  }
 
  .star-svg{width: 2em;
    height: 2em}


  /* iFrames */
  /*  rate chart iFrame */
  iframe{
    min-height: 26em;
    border: none;
   
  }
  .general-iframe{
    border: none;
    width: 100%;
  }
  
.iFrame{
  display: inline-block;


}
#iFrame-wrap{
  max-width: 80%;
  margin:auto;
}

 
  /* charts & circles */
  #single-star{
    padding-left: 10px;
    padding-top: 16px;
    height: 1em;
    width: 1em;
  }
  #star{
    font-size: 1em;
  }
  

  #rate-circle{
    font-size: 0.1em
  }
 
  
  #thanks{
    padding-top: 72px;
    font-size: 0.16em;
    padding-left: 19px;
  }


#like{
  width: 1em;
  position: absolute;
  top: 0.5em;
  left: 2em;
}


#text{
  overflow:hidden;
  transition:max-height 1.3s ease-out; 
  height: 17em;
  max-height:900px; 
  padding: 1em;
}
#text h1{
  font-size: 1.7em
}











  /* reviews book page */
#revStars{
    font-size: 4em
  }

/* search form */
.search-form-nav{
  border-radius: 9px;
  float: none;
  margin: auto;
  border: solid 1px #ccc;
  background-color: white;
}


.search-form-index{
max-width: 56em;
border-radius: 9px;
width: 60%;
float: none;
margin: auto;
margin-top: -1em;
background-color: white;
box-shadow: 1px 12px 22px 2px #e6eff9;
}


#index{
  text-align: center;
  position:absolute;
  top:40vh;
  width:100%
}

.search-form-wrap-nav{
  width: 100%;
  position: fixed;
  top: 4.3em;
  background-color: #DEEBF7;
  padding: 0.2em 0.2em;
}
  
#index-search-input, #nav-search-input{
    border: none;
    width: calc(100% - 180px);
    padding: 12px 0px;
}

#select-genre, #add-genre{
  font-weight: bold;
  border: none;
  background-color: transparent;
  padding: 12px 0px;
  margin-left: 6px;
  color: #337ab7;
}


#select-genre{
  width: 115px;
}
#add-genre{
  border: solid 1px #337ab7;
  border-radius: 9px;
}
#submit-btn{
  width: 55px;
  background-color: #337ab7;
  border: none;
  color: white;
  float: right;
  padding: 12px;
  border-radius: 0px 9px 9px 0px;
}
#submit-btn:hover{
background-color: #2A6AA2;
}
#submit{
  float:none
}




















@media only screen and (min-width: 700px) {
    .search-form-nav{
      width: 68%;
    }

    .thin-line{
      display:none
    }
   .title{
     margin-top: 1em;
   }
   #text{
     width:90%
   }
  
  }


@media only screen and (min-width: 555px) {
    #add-btn, #log-btn, #reg-btn .form-btn, #edit-btn, #review-btn, #contact-btn{
      max-width: 12em;
      min-height: 3em;
    }
   
  }

@media only screen and (max-width: 655px) {
 #search-form-index{
   width: 98%;
 }

}

@media only screen and (max-width:480px){
    .description {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
     }
  }

@media only screen and (min-width: 990px) {
    .result-container{
      max-width: 60%;
      margin: auto
    }
  }

@media only screen and (min-width: 1023px) {
    .search-form-nav{
      max-width: 600px;
    
    }
    .log_in_form{
      max-width: 600px;
    }

    #add-book-form{
    max-width: 70%;
    }
    
  }
  

@media only screen and (max-width: 1423px) {
  #text{
    height:auto
  }
  }



/*forms*/


.general-form{
  margin:auto;
  width:90%;
}

.general-form input{
    height: 3em;
    width: 100%;
    border-radius: 9px;
    border:solid 1px rgb(204, 204, 204);
    display:block;
    margin-bottom: 1em;
  }

  #log-form, #register-form{
    max-width:22em;
    margin-top:3em
  }


#description, #comment{
    width: 100%;
    border-radius: 9px;
    border: solid 1px rgb(204, 204, 204);
  }

 /*  *** buttons *** */
.yes-btn, .no-btn{
  color: #307bbb;
  background-color: white;
  border: solid 2px #307bbb;
  padding: 0.5em 1em;
  border-radius: 6px;
  cursor: pointer;
}
.yes-btn:hover, .no-btn:hover, .review-btn:hover, .add-book-btn:hover, .rate-btn-after:hover{
 background-color: #307bbb;
 color: white;

}
.yes-btn{
  float: right;
}

.no-btn{
  float: left
}

.form-btn{
  width:70%;
  border-radius:9px;
  background-color: #307bbb;
  color: white;
  margin-bottom: 0.3em;
  margin-top: 0.3em;
  margin: auto;
  min-height: 3em;
}

.delete-btn, .edit-btn {
  background-color: transparent;
  border: none;
  color: #307bbb;
  font-weight: bold
  
}

.delete-btn:hover, .edit-btn:hover{
    text-decoration: underline;
  }

.review-btn, .add-book-btn{
    background-color: transparent;
    border: solid 2px#307bbb;
    color: #307bbb;
    padding: 0.8em 1em;
    border-radius: 9px;
  }

  #add-book{
    margin: 0.2em;
    color: #307bbb;
  }
 #add-book:hover{
  background-color: #307bbb;
  color: white;
 }
.rate-btn{
    background-color: whitesmoke;
    border: solid 2px;
    border-radius: 6px;
    padding: 0.3em;
    position: relative;
    top: -1.9em;
    left: 2.5em;
    
  }
.rate-btn-after{
    border: solid 2px #307bbb;
    color: #307bbb;
  }


  /*****************************************tabs*************************/
  /*code from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_tabs_open*/

 /* Style the tab */
 .tab {
  overflow: hidden;
  background-color: white;
}

/* Style the buttons inside the tab */
.tab button {
  background-color: white;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.3s;
  font-size: 17px;
}

/* Change background color of buttons on hover */
.tab button:hover {
  background-color: #307bbb;
  color: white
}

/* Create an active/current tablink class */
.tab button.active {
  background-color: #307bbb;
  color: white;
}

/* Style the tab content */
.tabcontent {
  display: none;
  padding: 6px 12px;
  border: 1px solid #ccc;
  border-top: none;
}
/* *************rnd of borrowed css************* */

/* **** custom tabs  ***** */
  .tab{
    border-bottom: 1px solid #ccc;
  }
  .tablinks{
    border-radius: 9px 9px 0 0;
    color: #307bbb;
  }
  .tablinks:hover{
    background-color: #307bbb;
    color: white;
  }
  .account-table{
    width:100%
  }



  #icon-success{
    font-size: 16em;
    color: #307bbb;
  }
  .modal-header{
    text-align: center;
  }
  .container > h3{
    text-align: center;
  }

  .review{
    position:relative;
    top: -10.4em;
  }

